experiments/atomicity-violations/report.txt
#0
main.c:13: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f4' should be called atomically.
  11. void f4(void) {}
  12. void g(void) {}
  13. void ff(void) { f3(); f1(); f4(); } // (f1, f4); (f3, f1)
                                  ^
  14. 
  15. 

#1
main.c:13: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f3' and 'f1' should be called atomically.
  11. void f4(void) {}
  12. void g(void) {}
  13. void ff(void) { f3(); f1(); f4(); } // (f1, f4); (f3, f1)
                            ^
  14. 
  15. 

#2
main.c:52: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  50. void test1(void)
  51. {
  52. 	f1(); f2(); g(); // (f1, f2)
             ^
  53. 
  54. 	f1(); g(); f2(); g();

#3
main.c:56: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  54. 	f1(); g(); f2(); g();
  55. 
  56. 	f1(); f1(); f2(); g(); // (f1, f2)
                   ^
  57. 
  58. 	f1(); f2(); f3(); g(); // (f1, f2); (f2, f3)

#4
main.c:58: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  56. 	f1(); f1(); f2(); g(); // (f1, f2)
  57. 
  58. 	f1(); f2(); f3(); g(); // (f1, f2); (f2, f3)
             ^
  59. 
  60. 	f1(); g(); f2(); g(); f3();

#5
main.c:58: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f2' and 'f3' should be called atomically.
  56. 	f1(); f1(); f2(); g(); // (f1, f2)
  57. 
  58. 	f1(); f2(); f3(); g(); // (f1, f2); (f2, f3)
                   ^
  59. 
  60. 	f1(); g(); f2(); g(); f3();

#6
main.c:68: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f2' and 'f4' should be called atomically.
  66. 	f4(); f2(); g(); // (f4, f2)
  67. 
  68. 	f2(); f4(); g(); // (f2, f4)
             ^
  69. 
  70. 	f4();

#7
main.c:76: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f3' and 'f4' should be called atomically.
  74. 	g();
  75. 
  76. 	f3(); f4(); // (f3, f4)
             ^
  77. }
  78. 

#8
main.c:66: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  64. void test2(void)
  65. {
  66. 	f4(); f2(); g(); // (f4, f2)
             ^
  67. 
  68. 	f2(); f4(); g(); // (f2, f4)

#9
main.c:73: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  71. 	pthread_mutex_lock(&lock);
  72. 	pthread_mutex_unlock(&lock);
  73. 	f2(); // (f4, f2)
       ^
  74. 	g();
  75. 

#10
main.c:89: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  87. void test_only_unlock(void)
  88. {
  89. 	f1(); f2(); // (f1, f2)
             ^
  90. 	pthread_mutex_unlock(&lock);
  91. }

#11
main.c:100: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
   98. 	while (c > 0)
   99. 	{
  100. 		f1(); f2(); // (f1, f2); (f2, f1)
               ^
  101. 	}
  102. 

#12
main.c:106: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  104. 	while (c > 0)
  105. 	{
  106. 		f2(); // (f1, f2)
         ^
  107. 	}
  108. 	f3(); // (f1, f3); (f2, f3)

#13
main.c:108: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f3' should be called atomically.
  106. 		f2(); // (f1, f2)
  107. 	}
  108. 	f3(); // (f1, f3); (f2, f3)
        ^
  109. 
  110. 	for (; c > 0; f1()) // (f3, f1)

#14
main.c:112: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f3' should be called atomically.
  110. 	for (; c > 0; f1()) // (f3, f1)
  111. 	{
  112. 		f3(); // (f1, f3)
         ^
  113. 	}
  114. 

#15
main.c:100: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f2' and 'f1' should be called atomically.
   98. 	while (c > 0)
   99. 	{
  100. 		f1(); f2(); // (f1, f2); (f2, f1)
         ^
  101. 	}
  102. 

#16
main.c:103: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f2' and 'f1' should be called atomically.
  101. 	}
  102. 
  103. 	f1(); // (f2, f1)
        ^
  104. 	while (c > 0)
  105. 	{

#17
main.c:108: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f2' and 'f3' should be called atomically.
  106. 		f2(); // (f1, f2)
  107. 	}
  108. 	f3(); // (f1, f3); (f2, f3)
        ^
  109. 
  110. 	for (; c > 0; f1()) // (f3, f1)

#18
main.c:110: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f3' and 'f1' should be called atomically.
  108. 	f3(); // (f1, f3); (f2, f3)
  109. 
  110. 	for (; c > 0; f1()) // (f3, f1)
                      ^
  111. 	{
  112. 		f3(); // (f1, f3)

#19
main.c:136: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f2' should be called atomically.
  134. 	if (c > 0)
  135. 	{
  136. 		f2(); // (f1, f2)
         ^
  137. 	}
  138. 	else

#20
main.c:140: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f1' and 'f3' should be called atomically.
  138. 	else
  139. 	{
  140. 		f3(); // (f1, f3)
         ^
  141. 	}
  142. 	f3(); // (f2, f3)

#21
main.c:142: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f2' and 'f3' should be called atomically.
  140. 		f3(); // (f1, f3)
  141. 	}
  142. 	f3(); // (f2, f3)
        ^
  143. 
  144. 	g();

#22
main.c:153: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  151. 	else if (c > 0)
  152. 	{
  153. 		f2(); // (f4, f2)
         ^
  154. 	}
  155. 	f2(); // (f4, f2)

#23
main.c:155: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  153. 		f2(); // (f4, f2)
  154. 	}
  155. 	f2(); // (f4, f2)
        ^
  156. }
  157. 

#24
main.c:171: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f4' and 'f2' should be called atomically.
  169. 	g();
  170. 
  171. 	ff(); f2(); // (f4, f2); (ff, f3)
              ^
  172. }
  173. 

#25
main.c:167: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'f4' and 'ff' should be called atomically.
  165. 	pthread_mutex_unlock(&lock);
  166. 
  167. 	ff(); // (f4, ff); (ff, f3)
        ^
  168. 
  169. 	g();

#26
main.c:167: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'ff' and 'f3' should be called atomically.
  165. 	pthread_mutex_unlock(&lock);
  166. 
  167. 	ff(); // (f4, ff); (ff, f3)
        ^
  168. 
  169. 	g();

#27
main.c:171: error: ATOMICITY_VIOLATION
  Atomicity Violation! - Functions 'ff' and 'f3' should be called atomically.
  169. 	g();
  170. 
  171. 	ff(); f2(); // (f4, f2); (ff, f3)
        ^
  172. }
  173. 

Found 28 issues
  ATOMICITY_VIOLATION: 28
